...
            border: Border.all(color: Colors.black),
            borderRadius: BorderRadius.circular(20)),
        child: ListTile(
          subtitle: Text(widget.dateTimeCreate),
          title: Text(widget.nameTask),
          trailing: IconButton(
            key: const Key("checkBoxKey"),
            icon: !isOnTap
                ? Icon(
                    Icons.check_circle_outline,
                    size: height / 25,
                  )
                : Icon(
...
